added auto background capture and openTSPS OSC support

--- a/KinectWPFOpenCV/KinectWPFOpenCV.csproj
+++ b/KinectWPFOpenCV/KinectWPFOpenCV.csproj
@@ -98,12 +98,19 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ImageHelpers.cs" />
+    <Compile Include="jsOSCBundle.cs" />
+    <Compile Include="jsOSCMessage.cs" />
+    <Compile Include="jsOSCPacket.cs" />
+    <Compile Include="jsOSCReceiver.cs" />
+    <Compile Include="jsOSCTransmitter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Person.cs" />
+    <Compile Include="PersonHistory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
